# teaching-assistant

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
configs/: config.yaml
configs/app/: app.yaml
configs/embedding/: embedding.yaml
configs/indexing/: indexing.yaml
configs/llm/: llm.yaml
configs/qdrant/: docker.yaml  local.yaml
configs/retrieval/: retrieval.yaml
services/rag/: Dockerfile
services/task_queue/: Dockerfile
src/teaching_assistant/: .dockerignore  api.py  bootstrap.py  config_schema.py  schemas.py
src/teaching_assistant/rag/: api.py  index_manager.py  question_gen.py  schemas.py
src/teaching_assistant/task_queue/: api.py  celery_app.py  gen_router.py  ingest_router.py  settings.py  tasks.py
