[project]
name = "teaching-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dmitry Karasev", email = "dakarasev@edu.hse.ru" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "hydra-core>=1.3.2",
    "llama-index-core>=0.14.12",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-huggingface>=0.6.1",
    "llama-index-readers-file>=0.5.6",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "omegaconf>=2.3.0",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "qdrant-client>=1.16.2",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
teaching-assistant = "teaching_assistant:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
